feat(emission-factors): rerun us numbers with new filter

--- a/config/zones/US-CAL-CISO.yaml
+++ b/config/zones/US-CAL-CISO.yaml
@@ -1064,13 +1064,13 @@ emissionFactors:
     gas:
       - datetime: '2020-01-01'
         source: eGrid 2020
-        value: 403.8432591000186
+        value: 404.4721980786223
       - datetime: '2021-01-01'
         source: eGrid 2021
-        value: 388.81006189530143
+        value: 389.8140694590953
       - datetime: '2022-01-01'
         source: eGrid 2022
-        value: 388.48608155190834
+        value: 389.10232982859753
       - datetime: '2023-01-01'
         source: eGrid 2023
         value: 396.3628485714517
@@ -1184,13 +1184,13 @@ emissionFactors:
     gas:
       - datetime: '2020-01-01'
         source: eGrid 2020; IPCC 2014
-        value: 523.8432591000186
+        value: 524.4721980786223
       - datetime: '2021-01-01'
         source: eGrid 2021; IPCC 2014
-        value: 508.81006189530143
+        value: 509.8140694590953
       - datetime: '2022-01-01'
         source: eGrid 2022; IPCC 2014
-        value: 508.48608155190834
+        value: 509.10232982859753
       - datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
         value: 516.3628485714517
@@ -1401,8 +1401,8 @@ fallbackZoneMixes:
         solar: 0.2087720447881934
         unknown: 0.011761931454553983
         wind: 0.10376508129748757
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
 parsers:
   consumption: US_CA.fetch_consumption
   consumptionForecast: US_CA.fetch_consumption_forecast
