--- a/config/zones/PR.yaml
+++ b/config/zones/PR.yaml
@@ -156,7 +156,8 @@ emissionFactors:
         value: 755.5503294336717
     unknown:
       _comment: 'Source: https://indicadores.pr/dataset/generacion-consumo-costo-ingresos-y-clientes-del-sistema-electrico-de-puerto-rico/resource/fdad4f42-a4be-48bb-9478-a8fb75c000c6'
-      source: assumes 12% hydro, 57% solar, 31% wind based on average renewable generation October 2019-September 2020
+      source: assumes 12% hydro, 57% solar, 31% wind based on average renewable generation
+        October 2019-September 2020
       value: 0.0
   lifecycle:
     biomass:
@@ -234,7 +235,8 @@ emissionFactors:
         value: 999.5503294336717
     unknown:
       _comment: 'Source: https://indicadores.pr/dataset/generacion-consumo-costo-ingresos-y-clientes-del-sistema-electrico-de-puerto-rico/resource/fdad4f42-a4be-48bb-9478-a8fb75c000c6'
-      source: assumes 12% hydro, 57% solar, 31% wind based on average renewable generation October 2019-September 2020
+      source: assumes 12% hydro, 57% solar, 31% wind based on average renewable generation
+        October 2019-September 2020
       value: 31.939999999999998
 fallbackZoneMixes:
   powerOriginRatios:
@@ -343,8 +345,8 @@ fallbackZoneMixes:
         solar: 0.012790315399735448
         unknown: 0.0009000191751649909
         wind: 0.008674031627125225
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
 isLowCarbon:
   unknown:
     value: 1
