--- a/config/zones/US-AK.yaml
+++ b/config/zones/US-AK.yaml
@@ -151,9 +151,8 @@ emissionFactors:
       - datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
         value: 926.5489198648306
-        value: 907.88
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
 region: Americas
 sources:
   IPCC 2014:
