--- a/config/zones/US-CAR-CPLE.yaml
+++ b/config/zones/US-CAR-CPLE.yaml
@@ -281,7 +281,7 @@ emissionFactors:
     coal:
       - datetime: '2020-01-01'
         source: eGrid 2020
-        value: 970.9110841826375
+        value: 1021.9158971238843
       - datetime: '2021-01-01'
         source: eGrid 2021
         value: 1021.5404864286071
@@ -294,7 +294,7 @@ emissionFactors:
     gas:
       - datetime: '2020-01-01'
         source: eGrid 2020
-        value: 394.22337502764384
+        value: 399.6129537439065
       - datetime: '2021-01-01'
         source: eGrid 2021
         value: 401.1166854159786
@@ -303,7 +303,7 @@ emissionFactors:
         value: 412.1979214448654
       - datetime: '2023-01-01'
         source: eGrid 2023
-        value: 391.6090306908343
+        value: 391.93702628361535
     geothermal:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -350,7 +350,7 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2021-01-01'
         source: eGrid 2021
-        value: 754.5315891025153
+        value: 756.6867166175201
       - _comment: Mean of all US zones
         datetime: '2022-01-01'
         source: eGrid 2022
@@ -358,7 +358,7 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2023-01-01'
         source: eGrid 2023
-        value: 692.2365799135232
+        value: 757.3688858307635
   lifecycle:
     battery discharge:
       - _comment: used storage values greater than zero.
@@ -385,7 +385,7 @@ emissionFactors:
     coal:
       - datetime: '2020-01-01'
         source: eGrid 2020; IPCC 2014
-        value: 1030.9110841826375
+        value: 1081.9158971238844
       - datetime: '2021-01-01'
         source: eGrid 2021; IPCC 2014
         value: 1081.540486428607
@@ -398,7 +398,7 @@ emissionFactors:
     gas:
       - datetime: '2020-01-01'
         source: eGrid 2020; IPCC 2014
-        value: 514.2233750276439
+        value: 519.6129537439065
       - datetime: '2021-01-01'
         source: eGrid 2021; IPCC 2014
         value: 521.1166854159786
@@ -407,7 +407,7 @@ emissionFactors:
         value: 532.1979214448654
       - datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
-        value: 511.6090306908343
+        value: 511.93702628361535
     geothermal:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -454,7 +454,7 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2021-01-01'
         source: eGrid 2021; IPCC 2014
-        value: 998.5315891025153
+        value: 1000.6867166175201
       - _comment: Mean of all US zones
         datetime: '2022-01-01'
         source: eGrid 2022; IPCC 2014
@@ -462,7 +462,7 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
-        value: 936.2365799135232
+        value: 1001.3688858307635
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
@@ -619,8 +619,8 @@ fallbackZoneMixes:
         solar: 0.07846100156349965
         unknown: 0.11024049856981802
         wind: 0.00029901388079216223
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
