--- a/config/zones/US-CENT-SPA.yaml
+++ b/config/zones/US-CENT-SPA.yaml
@@ -143,19 +143,19 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
         source: eGrid 2020
-        value: 406.0343467262286
+        value: 406.54956423174013
       - _comment: Mean of all US zones
         datetime: '2021-01-01'
         source: eGrid 2021
-        value: 402.4735945289923
+        value: 403.07062959378845
       - _comment: Mean of all US zones
         datetime: '2022-01-01'
         source: eGrid 2022
-        value: 409.0168159348194
+        value: 409.3455569635937
       - _comment: Mean of all US zones
         datetime: '2023-01-01'
         source: eGrid 2023
-        value: 406.9490004903347
+        value: 411.26540305697193
     geothermal:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -181,7 +181,7 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2021-01-01'
         source: eGrid 2021
-        value: 754.5315891025153
+        value: 756.6867166175201
       - _comment: Mean of all US zones
         datetime: '2022-01-01'
         source: eGrid 2022
@@ -189,7 +189,7 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2023-01-01'
         source: eGrid 2023
-        value: 692.2365799135232
+        value: 757.3688858307635
   lifecycle:
     biomass:
       - _comment: Mean of all US zones
@@ -228,19 +228,19 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
         source: eGrid 2020; IPCC 2014
-        value: 526.0343467262286
+        value: 526.5495642317401
       - _comment: Mean of all US zones
         datetime: '2021-01-01'
         source: eGrid 2021; IPCC 2014
-        value: 522.4735945289923
+        value: 523.0706295937885
       - _comment: Mean of all US zones
         datetime: '2022-01-01'
         source: eGrid 2022; IPCC 2014
-        value: 529.0168159348194
+        value: 529.3455569635937
       - _comment: Mean of all US zones
         datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
-        value: 526.9490004903347
+        value: 531.265403056972
     geothermal:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -266,7 +266,7 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2021-01-01'
         source: eGrid 2021; IPCC 2014
-        value: 998.5315891025153
+        value: 1000.6867166175201
       - _comment: Mean of all US zones
         datetime: '2022-01-01'
         source: eGrid 2022; IPCC 2014
@@ -274,7 +274,7 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
-        value: 936.2365799135232
+        value: 1001.3688858307635
 fallbackZoneMixes:
   powerOriginRatios:
     - _source: Electricity Maps, 2015 average
@@ -427,8 +427,8 @@ fallbackZoneMixes:
         solar: 0.0007941509621297181
         unknown: 0.00020702289645406453
         wind: 0.09255513661771894
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
