--- a/config/zones/US-NY-NYIS.yaml
+++ b/config/zones/US-NY-NYIS.yaml
@@ -692,15 +692,15 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2021-01-01'
         source: eGrid 2021
-        value: 984.16897110535
+        value: 984.2045157721725
       - _comment: Mean of all US zones
         datetime: '2022-01-01'
         source: eGrid 2022
-        value: 992.920614108907
+        value: 992.9479158763683
       - _comment: Mean of all US zones
         datetime: '2023-01-01'
         source: eGrid 2023
-        value: 1019.6370786222118
+        value: 1021.1805847188886
     gas:
       - datetime: '2020-01-01'
         source: eGrid 2020
@@ -713,7 +713,7 @@ emissionFactors:
         value: 419.59471382500686
       - datetime: '2023-01-01'
         source: eGrid 2023
-        value: 417.41468220380995
+        value: 421.90534715307166
     geothermal:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -743,7 +743,7 @@ emissionFactors:
         value: 660.944095982844
       - datetime: '2023-01-01'
         source: eGrid 2023
-        value: 503.6367578727004
+        value: 779.7224473492394
   lifecycle:
     biomass:
       - _comment: Mean of all US zones
@@ -769,15 +769,15 @@ emissionFactors:
       - _comment: Mean of all US zones
         datetime: '2021-01-01'
         source: eGrid 2021; IPCC 2014
-        value: 1044.16897110535
+        value: 1044.2045157721725
       - _comment: Mean of all US zones
         datetime: '2022-01-01'
         source: eGrid 2022; IPCC 2014
-        value: 1052.920614108907
+        value: 1052.9479158763684
       - _comment: Mean of all US zones
         datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
-        value: 1079.637078622212
+        value: 1081.1805847188884
     gas:
       - datetime: '2020-01-01'
         source: eGrid 2020; IPCC 2014
@@ -790,7 +790,7 @@ emissionFactors:
         value: 539.5947138250069
       - datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
-        value: 537.4146822038099
+        value: 541.9053471530717
     geothermal:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -820,7 +820,7 @@ emissionFactors:
         value: 904.944095982844
       - datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
-        value: 747.6367578727004
+        value: 1023.7224473492394
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
@@ -962,8 +962,8 @@ fallbackZoneMixes:
         solar: 0.000687284047628341
         unknown: 0.01756555009051059
         wind: 0.03966033748337813
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: US_NY.fetch_consumption_forecast
