--- a/config/zones/US-SE-SOCO.yaml
+++ b/config/zones/US-SE-SOCO.yaml
@@ -499,13 +499,13 @@ emissionFactors:
     gas:
       - datetime: '2020-01-01'
         source: eGrid 2020
-        value: 403.2838165867553
+        value: 406.06689068673234
       - datetime: '2021-01-01'
         source: eGrid 2021
-        value: 391.97215165358426
+        value: 396.88877958385467
       - datetime: '2022-01-01'
         source: eGrid 2022
-        value: 403.40194702138473
+        value: 404.79442413927694
       - datetime: '2023-01-01'
         source: eGrid 2023
         value: 424.35485209409916
@@ -543,7 +543,7 @@ emissionFactors:
         value: 362.1182499048772
       - datetime: '2023-01-01'
         source: eGrid 2023
-        value: 249.87130843532887
+        value: 250.47181242406236
   lifecycle:
     battery discharge:
       - _comment: used storage values greater than zero.
@@ -583,13 +583,13 @@ emissionFactors:
     gas:
       - datetime: '2020-01-01'
         source: eGrid 2020; IPCC 2014
-        value: 523.2838165867553
+        value: 526.0668906867323
       - datetime: '2021-01-01'
         source: eGrid 2021; IPCC 2014
-        value: 511.97215165358426
+        value: 516.8887795838547
       - datetime: '2022-01-01'
         source: eGrid 2022; IPCC 2014
-        value: 523.4019470213848
+        value: 524.794424139277
       - datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
         value: 544.3548520940992
@@ -627,7 +627,7 @@ emissionFactors:
         value: 606.1182499048772
       - datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
-        value: 493.87130843532884
+        value: 494.47181242406236
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
@@ -769,8 +769,8 @@ fallbackZoneMixes:
         solar: 0.03388584704198945
         unknown: 0.010455775763807308
         wind: 0.00037636503223176254
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
