--- a/config/zones/RU-EU.yaml
+++ b/config/zones/RU-EU.yaml
@@ -21,5 +21,8 @@ emissionFactors:
 has_day_ahead_price_license: False
 hide_day_ahead_price: False
 region: Europe
+sources:
+  IEA 2015:
+    link: https://www.iea.org/statistics/statisticssearch/report/?country=Russia&product=electricityandheat
 timezone: Europe/Moscow
 zone_name: Arctic
