--- a/config/zones/RU-KGD.yaml
+++ b/config/zones/RU-KGD.yaml
@@ -29,5 +29,8 @@ fallbackZoneMixes:
 has_day_ahead_price_license: False
 hide_day_ahead_price: False
 region: Europe
+sources:
+  IEA 2015:
+    link: https://www.iea.org/statistics/statisticssearch/report/?country=Russia&product=electricityandheat
 timezone: Europe/Kaliningrad
 zone_name: Kaliningrad
