Update capacity values and dates in UZ.yaml

--- a/config/zones/UZ.yaml
+++ b/config/zones/UZ.yaml
@@ -5,22 +5,22 @@ bounding_box:
     - 46.06232808111943
 capacity:
   solar:
-    - datetime: '2024-08-30'
+    - datetime: '2026-01-01'
       source: gov.uz
       comment: The Ministry of Energy of the Republic of Uzbekistan
-      value: 2300
+      value: 3930
   wind:
-    - datetime: '2024-08-30'
+    - datetime: '2026-01-01'
       source: gov.uz
       comment: The Ministry of Energy of the Republic of Uzbekistan
-      value: 500
+      value: 1652
   hydro:
-    - datetime: '2024-08-29'
-      source: stat.uz
-      comment: Statistics Agency under the President of the Republic of Uzbekistan
-      value: 2381
+    - datetime: '2026-01-01'
+      source: gov.uz
+      comment: The Ministry of Energy of the Republic of Uzbekistan
+      value: 2441
   gas:
-    - datetime: '2024-08-29'
+    - datetime: '2026-01-01'
       source: stat.uz
       comment: Statistics Agency under the President of the Republic of Uzbekistan
       value: 13874
